--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,34 @@
 server.port=8085
-spring.datasource.url=jdbc:mysql://localhost:3306/userDB
+spring.datasource.url=jdbc:mysql://mysqlcontainer1:3306/userdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Shinchan@123
-spring.datasource.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.password=root
+spring.datasource.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.error.include-message=always
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#server.port=8085
+#spring.datasource.url=jdbc:mysql://localhost:3306/userdb
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#server.error.include-message=always
 
 
 
